qa-theme/Etalab/scss/settings/_settings.color.scss
@if $toc {
  /* - Color____________________Définition et assignation des couleurs */
} @else {
  /* Définition et assignation des couleurs [settings]
  ========================================================================== */
}

// Définition
// @note Les couleurs sont nommées grâce à l'outil [Chir.ag’s Name that Color](http://chir.ag/projects/name-that-color/).

// Definition
$sail: #b4e1fa;
$blue-ribbon: #006be6;
$endeavou: #0053B3;
$congress-blue: #003b80;
$prussian-blue: #00234d;
$white: #ffffff;
$mystic: #ebeff3;
$geyser: #c9d3df;
$cadet-blue: #adb9c9;
$regent-gray: #8393a7;
$blue-bayoux: #53657d;
$ebony-clay: #26353f;
$mine-shaft: #383838;
$cod-gray: #1c1c1c;
$jade: #03bd5b;
$tara: #daf5e7;
$yellow-orange: #ff9947;
$serenade: #fff0e4;
$punch: #d63626;
$sea-pink: #efaca6;

// Abbreviations
// - bgc => background-color
// - bgi => background-image
// - bdc => border-color
// - txt => text (color)
// - plh => placeholder (color)

// prettier-ignore
$theme-colors: (
  // Valeurs par défaut
  default-bdc: $geyser,
  default-bgc: $white,
  default-txt: $mine-shaft,
  default-box-shadow: $cod-gray,
  default-focus: $blue-ribbon,

  // Assignation [components]
  attribution-footer-link-txt: $blue-bayoux,
  topbar-service-link-txt: $cod-gray,
  nav-main-link-txt: $endeavou,
  nav-main-link-current-txt: $jade,
);

